[package]
name = "futureplay"
version = "0.1.0"
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.1"
chrono = "0.2"
futures = { git = "https://github.com/alexcrichton/futures-rs", branch = "master" }
futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs", branch = "master" }
